[dependencies]
derive_more = '0.15.0'
log = "0.4.13"
codec = { package = 'parity-scale-codec', version = '1.0.0' }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.2.1"
# RPC related dependencies
jsonrpc-core = "15.1.0"

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.parachain-runtime]
path = '../runtime'
version = '2.0.0'

[dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '0.8.0'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '0.8.0'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '0.8.0'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '0.8.0'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '0.8.0'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '0.8.0'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sc-tracing]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '0.8.0'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-trie]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

# Cumulus dependencies
[dependencies.cumulus-consensus]
path = '../pallets/cumulus/consensus'

[dependencies.cumulus-collator]
path = '../pallets/cumulus/collator'

[dependencies.cumulus-network]
path = '../pallets/cumulus/network'

[dependencies.cumulus-primitives]
path = '../pallets/cumulus/primitives'

[dependencies.cumulus-service]
path = '../pallets/cumulus/service'

#Frontier dependencies
[dependencies.pallet-evm]
path = '../pallets/frontier/frame/evm'

# Polkadot dependencies
[dependencies.polkadot-primitives]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.8.28'

[dependencies.polkadot-service]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.8.28'

[dependencies.polkadot-cli]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.8.28'

[dependencies.polkadot-test-service]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.8.28'

[dependencies.polkadot-parachain]
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.8.28'

[[bin]]
name = 'phoenix-collator'

[package]
authors = ['yigo']
build = 'build.rs'
description = 'A phoenix parachain.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL-3'
name = 'phoenix-collator'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'
version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = []
runtime-benchmarks = ['parachain-runtime/runtime-benchmarks']
