[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '3.0.0'

[package]
authors = ['yigo']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL-3'
name = 'parachain-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'

version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.6'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
#version = '2.0.0'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
#version = '2.0.0'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '0.8.0'

[dependencies.pallet-democracy]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.pallet-elections-phragmen]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
#version = '2.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.8.28'
version = '2.0.0'

# Cumulus dependencies
[dependencies.parachain-info]
default-features = false
path = '../pallets/cumulus/rococo-parachains/pallets/parachain-info'

[dependencies.cumulus-runtime]
default-features = false
path = '../pallets/cumulus/runtime'

[dependencies.cumulus-parachain-system]
default-features = false
path = '../pallets/cumulus/parachain-system'

[dependencies.cumulus-primitives]
default-features = false
path = '../pallets/cumulus/primitives'

[dependencies.xcm-handler]
default-features = false
path = '../pallets/cumulus/xcm-handler'

#Frontier dependencies
[dependencies.pallet-evm]
default-features = false 
path = '../pallets/frontier/frame/evm'

[dependencies.fp-rpc]
default-features = false
path = '../pallets/frontier/primitives/rpc'

[dependencies.pallet-ethereum]
default-features = false
path = '../pallets/frontier/frame/ethereum'

# Polkadot dependencies
[dependencies.polkadot-parachain]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.8.28'

[dependencies.xcm]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.8.28'

[dependencies.xcm-builder]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.8.28'

[dependencies.xcm-executor]
default-features = false
git = "https://github.com/paritytech/polkadot"
branch = 'release-v0.8.28'

[features]
default = ['std']
runtime-benchmarks = [
    'sp-runtime/runtime-benchmarks',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'hex-literal',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
        "pallet-evm/std",
	"pallet-ethereum/std",
	"fp-rpc/std",
        "pallet-democracy/std",
        "pallet-contracts/std",
        "pallet-contracts-primitives/std",
        "pallet-contracts-rpc-runtime-api/std",
        "pallet-elections-phragmen/std",
	"parachain-info/std",
	"cumulus-runtime/std",
	"cumulus-parachain-system/std",
	"cumulus-primitives/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm-handler/std",
]
