[package]
name = "fc-db"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "rococo-v1 database backend"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/rococo-v1/"

[dependencies]
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-database = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
kvdb = "0.9.0"
kvdb-rocksdb = "0.11.0"
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
parking_lot = "0.11.1"
