[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'price-fetch'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
#[dependencies.hex-literal]
#version = '0.2.1'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
optional = true
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dev-dependencies]
serde = { version = "1.0.119" }

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'
[dependencies]
#codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
#frame-system = { default-features = false, version = '3.0.0'}
#frame-support = { default-features = false, version = '3.0.0'}
#frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
serde = { version = "1.0.119" , optional = true }
#sp-core = { default-features = false, version = '3.0.0'}
#sp-io = { default-features = false, version = '3.0.0'}
#sp-runtime = { default-features = false, version = '3.0.0'}
pallet-contracts = { default-features = false, version = '3.0.0' ,git = 'https://github.com/paritytech/substrate.git',branch = 'rococo-v1'}
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.14", default-features = false }
sp-std = { version = "3.0.0", default-features = false}
#[dev-dependencies]
#serde = { version = "1.0.119" }
#sp-core = { default-features = false, version = '3.0.0' }
#sp-io = { default-features = false, version = '3.0.0' }
#sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-contracts/std',
	"log/std",
	"sp-std/std",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"serde",
]
runtime-benchmarks = ['frame-benchmarking']
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
