[package]
name = "cumulus-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }

# Polkadot dependencies
polkadot-service = { git = "https://github.com/paritytech/polkadot", features = [ "real-overseer" ], branch = "release-v0.8.28" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }

# Cumulus dependencies
cumulus-network = { path = "../network" }
cumulus-primitives = { path = "../primitives" }
cumulus-runtime = { path = "../runtime" }

log = "0.4.13"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.9"

[dev-dependencies]
# Cumulus dependencies
cumulus-test-runtime = { path = "../test/runtime" }
cumulus-test-client = { path = "../test/client" }

# Substrate dependencies
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }

# Polkadot dependencies
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-node-subsystem-test-helpers = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }

# Other dependencies
env_logger = "0.7.1"
