[package]
name = "cumulus-consensus"
description = "Proxy Polkadot's consensus as a consensus engine for Substrate"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate deps
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
tracing = "0.1.22"

[dev-dependencies]
# Substrate deps
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }

# Cumulus dependencies
cumulus-test-runtime = { path = "../test/runtime" }
cumulus-test-client = { path = "../test/client" }

# Other deps
futures-timer = "3.0.2"
