[package]
name = "cumulus-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# Substrate deps
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-statement-table = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }

# Cumulus deps
cumulus-primitives = { path = "../primitives" }

# other deps
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
log = "0.4.13"
parking_lot = "0.10.2"
derive_more = "0.99.2"

[dev-dependencies]
# Cumulus deps
cumulus-test-service = { path = "../test/service" }

# Polkadot deps
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }

# substrate deps
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
