[package]
name = "cumulus-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-collator = { path = "../collator" }
cumulus-primitives = { path = "../primitives" }

# Substrate dependencies
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }

# Other deps
futures = "0.3.6"
tracing = "0.1.22"
