[package]
name = "cumulus-test-service"
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.0.0' }
rand = "0.7.3"
serde = { version = "1.0.119", features = ["derive"] }

# Substrate
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.8.28" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }

# Polkadot
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }

# Cumulus
cumulus-consensus = { path = "../../consensus" }
cumulus-network = { path = "../../network" }
cumulus-primitives = { path = "../../primitives" }
cumulus-service = { path = "../../service" }
cumulus-test-runtime = { path = "../runtime" }

# RPC related dependencies
jsonrpc-core = "15.1.0"

[dev-dependencies]
futures = { version = "0.3.5" }
tokio = { version = "0.2.21", features = ["macros"] }

# Polkadot dependencies
polkadot-test-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.8.28" }

# Substrate dependencies
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.28" }
